@@ -1,4 +1,6 @@
 
+Dec 25, 2008: libarchive 2.5.905a released
+
 Dec 10, 2008: libarchive 2.5.904a released
 
 Dec 04, 2008: libarchive 2.5.903a released
